{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 298,
  "lineage": "9aa04569-681e-c216-c020-eb4db4a82420",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "dc_llc_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:loadbalancer/app/dc-llc-dev-lb/45eba8e80eb8bfef",
            "arn_suffix": "app/dc-llc-dev-lb/45eba8e80eb8bfef",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dc-llc-dev-lb-496867062.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:loadbalancer/app/dc-llc-dev-lb/45eba8e80eb8bfef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dc-llc-dev-lb",
            "preserve_host_header": false,
            "region": "ap-northeast-2",
            "security_groups": [
              "sg-012109b10b9cf4f6c",
              "sg-06b267bde78566ff7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049b8ae468ca250b4"
              },
              {
                "subnet_id": "subnet-09559210c465d392e"
              },
              {
                "subnet_id": "subnet-0a71f20ca2f5a2b10"
              }
            ],
            "subnets": [
              "subnet-049b8ae468ca250b4",
              "subnet-09559210c465d392e",
              "subnet-0a71f20ca2f5a2b10"
            ],
            "tags": {
              "Name": "dc_llc_lb"
            },
            "tags_all": {
              "Name": "dc_llc_lb"
            },
            "vpc_id": "vpc-0161cf58a1db8b719",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:loadbalancer/app/dc-llc-dev-lb/45eba8e80eb8bfef"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_subnet.public",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security_group.aws_security_group.ec2_sg_nexus",
            "module.security_group.aws_security_group.ec2_sg_ssh_http_https"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dev_proj_1_lb_https_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:listener/app/dc-llc-dev-lb/45eba8e80eb8bfef/dbd40d9995672eb9",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:195275648938:certificate/f4a49c4a-9252-4022-ab33-f8d84b5587c1",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:targetgroup/dc-llc-lb-target-group/eb93598e3795d3d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:listener/app/dc-llc-dev-lb/45eba8e80eb8bfef/dbd40d9995672eb9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:loadbalancer/app/dc-llc-dev-lb/45eba8e80eb8bfef",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-FS-1-2-Res-2019-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:listener/app/dc-llc-dev-lb/45eba8e80eb8bfef/dbd40d9995672eb9"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.alb.aws_lb.dc_llc_lb",
            "module.aws_ceritification_manager.aws_acm_certificate.dc_llc_dev_acm_arn",
            "module.aws_ceritification_manager.aws_acm_certificate_validation.dc_llc_dev_acm_validation",
            "module.dc-llc-vpc.aws_subnet.public",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.security_group.aws_security_group.ec2_sg_nexus",
            "module.security_group.aws_security_group.ec2_sg_ssh_http_https"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dev_proj_1_lb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:listener/app/dc-llc-dev-lb/45eba8e80eb8bfef/7228c335f19fe4af",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:targetgroup/dc-llc-lb-target-group/eb93598e3795d3d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:listener/app/dc-llc-dev-lb/45eba8e80eb8bfef/7228c335f19fe4af",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:loadbalancer/app/dc-llc-dev-lb/45eba8e80eb8bfef",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:listener/app/dc-llc-dev-lb/45eba8e80eb8bfef/7228c335f19fe4af"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.alb.aws_lb.dc_llc_lb",
            "module.dc-llc-vpc.aws_subnet.public",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.security_group.aws_security_group.ec2_sg_nexus",
            "module.security_group.aws_security_group.ec2_sg_ssh_http_https"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dev_proj_1_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:targetgroup/dc-llc-lb-target-group/eb93598e3795d3d7-20251007052826460600000006",
            "port": 9000,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:targetgroup/dc-llc-lb-target-group/eb93598e3795d3d7",
            "target_id": "i-094f6f6e1153b086b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_subnet.public",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.ec2.aws_instance.dc-llc-nexus",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.security_group.aws_security_group.ec2_sg_nexus",
            "module.security_group.aws_security_group.ec2_sg_ssh_http_https"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:network-acl/acl-054ace838cd584c3a",
            "default_network_acl_id": "acl-054ace838cd584c3a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-054ace838cd584c3a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "195275648938",
            "region": "ap-northeast-2",
            "subnet_ids": [
              "subnet-049b8ae468ca250b4",
              "subnet-05b38925564b04d51",
              "subnet-0ab8fec89ccbb4c91",
              "subnet-0ad1efb0e039381fb"
            ],
            "tags": {
              "Name": "dc-llc-vpc-default"
            },
            "tags_all": {
              "Name": "dc-llc-vpc-default"
            },
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dc-llc-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:route-table/rtb-085455724a5292e5d",
            "default_route_table_id": "rtb-085455724a5292e5d",
            "id": "rtb-085455724a5292e5d",
            "owner_id": "195275648938",
            "propagating_vgws": null,
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "dc-llc-vpc-default"
            },
            "tags_all": {
              "Name": "dc-llc-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dc-llc-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:security-group/sg-0077fd03deec1b386",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0077fd03deec1b386",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "195275648938",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dc-llc-vpc-default"
            },
            "tags_all": {
              "Name": "dc-llc-vpc-default"
            },
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dc-llc-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8f5b80487682d3c",
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:elastic-ip/eipalloc-0d8f5b80487682d3c",
            "domain": "vpc",
            "id": "eipalloc-0d8f5b80487682d3c",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-202-207-120.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.207.120",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dc-llc-vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "dc-llc-vpc-ap-northeast-2a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_internet_gateway.this",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:internet-gateway/igw-0afa928c505e29d72",
            "id": "igw-0afa928c505e29d72",
            "owner_id": "195275648938",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dc-llc-vpc"
            },
            "tags_all": {
              "Name": "dc-llc-vpc"
            },
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8f5b80487682d3c",
            "association_id": "eipassoc-0c0db23a959cf9b37",
            "connectivity_type": "public",
            "id": "nat-0757cd94aaf34e99b",
            "network_interface_id": "eni-0e46ae57c2d2d8e8b",
            "private_ip": "10.0.4.28",
            "public_ip": "43.202.207.120",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a71f20ca2f5a2b10",
            "tags": {
              "Name": "dc-llc-vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "dc-llc-vpc-ap-northeast-2a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_eip.nat",
            "module.dc-llc-vpc.aws_internet_gateway.this",
            "module.dc-llc-vpc.aws_subnet.public",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-007c6b35e3d5e7e631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0757cd94aaf34e99b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-007c6b35e3d5e7e63",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "195275648938",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-007c6b35e3d5e7e63"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_eip.nat",
            "module.dc-llc-vpc.aws_internet_gateway.this",
            "module.dc-llc-vpc.aws_nat_gateway.this",
            "module.dc-llc-vpc.aws_route_table.private",
            "module.dc-llc-vpc.aws_subnet.public",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0afa928c505e29d72",
            "id": "r-rtb-02f0a498ddf0907f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02f0a498ddf0907f9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "195275648938",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02f0a498ddf0907f9"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_internet_gateway.this",
            "module.dc-llc-vpc.aws_route_table.public",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:route-table/rtb-007c6b35e3d5e7e63",
            "id": "rtb-007c6b35e3d5e7e63",
            "owner_id": "195275648938",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "dc-llc-vpc-private"
            },
            "tags_all": {
              "Name": "dc-llc-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "195275648938",
            "id": "rtb-007c6b35e3d5e7e63",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:route-table/rtb-02f0a498ddf0907f9",
            "id": "rtb-02f0a498ddf0907f9",
            "owner_id": "195275648938",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "dc-llc-vpc-public"
            },
            "tags_all": {
              "Name": "dc-llc-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "195275648938",
            "id": "rtb-02f0a498ddf0907f9",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d46e1fdcf92f4b17",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-007c6b35e3d5e7e63",
            "subnet_id": "subnet-05b38925564b04d51"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_route_table.private",
            "module.dc-llc-vpc.aws_subnet.private",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c28726850157bffa",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-007c6b35e3d5e7e63",
            "subnet_id": "subnet-0ab8fec89ccbb4c91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_route_table.private",
            "module.dc-llc-vpc.aws_subnet.private",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04193120fe7447d00",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-007c6b35e3d5e7e63",
            "subnet_id": "subnet-0ad1efb0e039381fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_route_table.private",
            "module.dc-llc-vpc.aws_subnet.private",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef92e8c888d50a49",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02f0a498ddf0907f9",
            "subnet_id": "subnet-0a71f20ca2f5a2b10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_route_table.public",
            "module.dc-llc-vpc.aws_subnet.public",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030e304e946405233",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02f0a498ddf0907f9",
            "subnet_id": "subnet-049b8ae468ca250b4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_route_table.public",
            "module.dc-llc-vpc.aws_subnet.public",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0628c68b484732ea5",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02f0a498ddf0907f9",
            "subnet_id": "subnet-09559210c465d392e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_route_table.public",
            "module.dc-llc-vpc.aws_subnet.public",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:subnet/subnet-05b38925564b04d51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b38925564b04d51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275648938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dc-llc-vpc-private-ap-northeast-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dc-llc-vpc-private-ap-northeast-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "195275648938",
            "id": "subnet-05b38925564b04d51",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:subnet/subnet-0ab8fec89ccbb4c91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab8fec89ccbb4c91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275648938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dc-llc-vpc-private-ap-northeast-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dc-llc-vpc-private-ap-northeast-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "195275648938",
            "id": "subnet-0ab8fec89ccbb4c91",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:subnet/subnet-0ad1efb0e039381fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad1efb0e039381fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275648938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dc-llc-vpc-private-ap-northeast-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dc-llc-vpc-private-ap-northeast-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "195275648938",
            "id": "subnet-0ad1efb0e039381fb",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:subnet/subnet-0a71f20ca2f5a2b10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a71f20ca2f5a2b10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275648938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dc-llc-vpc-public-ap-northeast-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dc-llc-vpc-public-ap-northeast-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "195275648938",
            "id": "subnet-0a71f20ca2f5a2b10",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:subnet/subnet-049b8ae468ca250b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049b8ae468ca250b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275648938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dc-llc-vpc-public-ap-northeast-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dc-llc-vpc-public-ap-northeast-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "195275648938",
            "id": "subnet-049b8ae468ca250b4",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:subnet/subnet-09559210c465d392e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09559210c465d392e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275648938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dc-llc-vpc-public-ap-northeast-2c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dc-llc-vpc-public-ap-northeast-2c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "195275648938",
            "id": "subnet-09559210c465d392e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.dc-llc-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:vpc/vpc-0161cf58a1db8b719",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054ace838cd584c3a",
            "default_route_table_id": "rtb-085455724a5292e5d",
            "default_security_group_id": "sg-0077fd03deec1b386",
            "dhcp_options_id": "dopt-0c28c7b24b649d03a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0161cf58a1db8b719",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085455724a5292e5d",
            "owner_id": "195275648938",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "dc-llc-vpc"
            },
            "tags_all": {
              "Name": "dc-llc-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dc-llc-nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-099099dff4384719c",
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:instance/i-094f6f6e1153b086b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094f6f6e1153b086b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nexus_security_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0feb273232638d1d5"
              }
            ],
            "primary_network_interface_id": "eni-0feb273232638d1d5",
            "private_dns": "ip-10-0-4-147.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.147",
            "public_dns": "ec2-3-35-20-234.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.20.234",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0acfc470df32c5191",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a71f20ca2f5a2b10",
            "tags": {
              "Name": "dc-llc-nexus"
            },
            "tags_all": {
              "Name": "dc-llc-nexus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012109b10b9cf4f6c",
              "sg-06b267bde78566ff7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "195275648938",
            "id": "i-094f6f6e1153b086b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_subnet.public",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security_group.aws_security_group.ec2_sg_nexus",
            "module.security_group.aws_security_group.ec2_sg_ssh_http_https"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dev_proj_1_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:targetgroup/dc-llc-lb-target-group/eb93598e3795d3d7",
            "arn_suffix": "targetgroup/dc-llc-lb-target-group/eb93598e3795d3d7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "9000",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:targetgroup/dc-llc-lb-target-group/eb93598e3795d3d7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dc-llc-lb-target-group",
            "port": 9000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:targetgroup/dc-llc-lb-target-group/eb93598e3795d3d7"
          },
          "dependencies": [
            "module.dc-llc-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dev_proj_1_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:targetgroup/dc-llc-lb-target-group/eb93598e3795d3d7-20251007052826976100000007",
            "port": 9000,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:195275648938:targetgroup/dc-llc-lb-target-group/eb93598e3795d3d7",
            "target_id": "i-094f6f6e1153b086b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.dc-llc-vpc.aws_subnet.public",
            "module.dc-llc-vpc.aws_vpc.this",
            "module.dc-llc-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.ec2.aws_instance.dc-llc-nexus",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.security_group.aws_security_group.ec2_sg_nexus",
            "module.security_group.aws_security_group.ec2_sg_ssh_http_https"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:security-group/sg-012109b10b9cf4f6c",
            "description": "Enable the port 8081 for Nexus deployment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012109b10b9cf4f6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow the inbound traffic on port 9000",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "Enable the port 9000 for SonarQube deployment",
            "name_prefix": "",
            "owner_id": "195275648938",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG to allow incoming requests for Nexus on port 8081 and 8082"
            },
            "tags_all": {
              "Name": "SG to allow incoming requests for Nexus on port 8081 and 8082"
            },
            "timeouts": null,
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "195275648938",
            "id": "sg-012109b10b9cf4f6c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.dc-llc-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275648938:security-group/sg-06b267bde78566ff7",
            "description": "Enable the ports 22 \u0026 80 for ssh and http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b267bde78566ff7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG for EC2 to allow ports 22, 80 and 443",
            "name_prefix": "",
            "owner_id": "195275648938",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allowing the port numbers 22, 80 and 443."
            },
            "tags_all": {
              "Name": "Allowing the port numbers 22, 80 and 443."
            },
            "timeouts": null,
            "vpc_id": "vpc-0161cf58a1db8b719"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "195275648938",
            "id": "sg-06b267bde78566ff7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.dc-llc-vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}